--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,6 @@
 {
   "name": "recall-rush",
+  "main": "worker.js",
   "compatibility_date": "2026-01-05",
   "assets": {
     "directory": "./dist"
