--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,9 @@
 {
   "name": "recall-rush",
-  "main": "worker.js",
   "compatibility_date": "2026-01-05",
   "assets": {
-    "directory": "./dist"
+    "directory": "./dist",
+    "html_handling": "auto-trailing-slash",
+    "not_found_handling": "single-page-application"
   }
 }
