Add short link system with KV storage for clean share URLs

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,12 @@
     "binding": "ASSETS",
     "html_handling": "none"
   },
+  "kv_namespaces": [
+    {
+      "binding": "RESULTS_KV",
+      "id": "YOUR_KV_NAMESPACE_ID"
+    }
+  ],
   "observability": {
     "enabled": false,
     "head_sampling_rate": 1,
